
[workspace]
members = ["helib-bindings", "helib-rs"]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.80"
authors = ["Roman Walch <walch@taceo.io>"]
homepage = "https://www.taceo.io"
repository = "https:://github.com/TaceoLabs/helib-bigint-rs"
license = "MIT OR Apache-2.0"
publish = false
readme = "./README.md"
