[package]
name = "helib-rs"
version = "0.1.0"
publish.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
ark-ff = "0.5"
num-bigint = "0.4"
helib-bindings = { path = "../helib-bindings" }
rand = "0.8"
thiserror = "2.0"

[dev-dependencies]
ark-bn254 = "0.5"
